edited teh bibliogrpahy.

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 @book{humphreys81,
 	title = {Linear Algebraic Groups},
-	author = {J. Humphreys},
+	author = {Humphreys, J.},
 	publisher = {Springer-Verlag},
 	year = {1981}
 }
@@ -88,9 +88,15 @@
   publisher={Elsevier}
 }
 
+@article{morandi98,
+  title={Algebraic Groups, Grassmannians, and Flag Varieties},
+  author={Morandi, P.},
+  year={1998}
+}
+
 @article{lusztig99,
   title={Aperiodicity in quantum affine gln},
-  author={Lusztig, George},
+  author={Lusztig, G.},
   journal={Asian Journal of Mathematics},
   volume={3},
   number={1},
@@ -139,7 +145,7 @@
 
 @article{hubery04,
   title={The composition algebra of an affine quiver},
-  author={Hubery, Andrew},
+  author={Hubery, A.},
   journal={arXiv preprint\\
   math/0403206},
   year={2004}
@@ -158,9 +164,15 @@
 
 @misc{hubery07,
 	title = {Hall polynomials for affine quivers},
-	author = {Andrew Hubery},
+	author = {Hubery, A.},
 	year = {2007},
 	eprint = {arXiv:math/0703178}
+}
+
+@article{hudec07,
+  title={The Grassmanian as a Projective Variety},
+  author={Hudec, D. A.},
+  year={2007}
 }
 
 @book{deng08,
@@ -172,14 +184,14 @@
 }
 
 @misc{dou10,
-	author = {Dou, R and Yong Jiang and Jie Xiao},
+	author = {Dou, R and Jiang, Y. and Xiao, J.},
 	title = {Hall algebra approach to Drinfeld's presentation of quantum loop algebras},
 	year = {2010},
 	eprint = {arXiv:1002.1316}
 }
 
 @article{su10,
-  title={A generic multiplication in quantized Schur algebras},
+  title={A generic multiplication in quantised Schur algebras},
   author={Su, X.},
   journal={Quarterly journal of mathematics},
   volume={61},
@@ -208,8 +220,8 @@
 	publisher={North-Holland}
 }
 
-@misc{su12,
-	author = {Bernt Tore Jensen and Xiuping},
+@article{su12,
+	author = {Jensen, B.T. and Su, X.},
 	title = {A geometric realisation of 0-Schur and 0-Hecke algebras},
 	year = {2012},
 	eprint = {arXiv:1207.6769}
@@ -233,36 +245,31 @@
   year={2013}
 }
 
-@misc{su13,
-	author = {Bernt Tore Jensen and Xiuping Su and Guiyu Yang},
-	title = {Projective modules of 0-Schur algebras},
-	year = {2013},
-	eprint = {arXiv:1312.5487}
-}
-
-@misc{deng15-01,
-	author = {Bangming Deng and Shiquan Ruan},
-	title = {Hall polynomials for tame type},
-	year = {2015},
-	eprint = {arXiv:1512.03504}
-}
-
-@article{hu07,
-	title={The Grassmanian as a Projective Variety},
-	author={D. A. Hudec},
-	year={2007}
-}
-
 @book{harris13,
   title={Algebraic geometry: a first course},
-  author={Harris, Joe},
+  author={Harris, J.},
   volume={133},
   year={2013},
   publisher={Springer Science \& Business Media}
 }
 
-@article{morandi98,
-  title={Algebraic Groups, Grassmannians, and Flag Varieties},
-  author={Morandi, Patrick J},
-  year={1998}
+@article{su15,
+  author = {Jensen, B. T. and Su, X.},
+  title = {Projective modules of 0-Schur algebras},
+  year = {2015},
+  eprint = {arXiv:1312.5487v3}
+}
+
+@article{deng15-01,
+  author = {Deng, B. and Ruan, S.},
+  title = {Hall polynomials for tame type},
+  year = {2015},
+  eprint = {arXiv:1512.03504}
+}
+
+@article{su17,
+  author = {Jensen, B. T. and Su, X.},
+  title = {Degenerate 0-Schur algebras and nil-Temperley-Lieb algebras},
+  year = {2017},
+  eprint = {arXiv:1705.06084v2}
 }
