--- a/report.tex
+++ b/report.tex
@@ -16,10 +16,14 @@ To include in introduction:
 quantum groups
 
 
-The first part of the introduction should discuss the context of the topic and mention references. Then proceed to describe the double flag variety realisations of (affine) $q$-Schur algebras in the next two sections.
+The first part of the introduction should discuss the context of the topic and mention references.
 }
 
 \section{The double flag variety approach to q-Schur algebras}
+
+
+
+
 
 \section{The cyclic flags approach to affine q-Schur algebras}
 
