started the q-Schur algebra section of the introduction.

--- a/references.bib
+++ b/references.bib
@@ -66,6 +66,17 @@
   publisher={Sonderforschungsbereich 343}
 }
 
+@inproceedings{du95,
+  title={A note on quantized Weyl reciprocity at roots of unity},
+  author={Du, Jie},
+  booktitle={Algebra Colloq},
+  volume={2},
+  number={4},
+  pages={363--372},
+  year={1995},
+  organization={Citeseer}
+}
+
 @article{bongartz96,
   title={On degenerations and extensions of finite dimensional modules},
   author={Bongartz, K.},
@@ -201,7 +212,7 @@
   publisher={OUP}
 }
 
-@book{deng12,
+@book{deng12book,
   title={A double Hall algebra approach to affine quantum Schur--Weyl theory},
   author={Deng, B. and Du, J. and Fu, Q.},
   volume={401},
@@ -209,7 +220,7 @@
   publisher={Cambridge University Press}
 }
 
-@article{dengyang12,
+@article{deng12,
 	title={On 0-Schur algebras},
 	author={Deng, B. and Yang, G.},
 	journal={Journal of Pure and Applied Algebra},
